--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,15 @@
 *.x86_64
 *.hex
 
+# Build files
+build/
+.cache/
+
 # Debug files
 *.dSYM/
 *.su
 *.idb
-*.pdb
+
 
 # Kernel Module Compile Results
 *.mod*
